Fixed minor issues on mobile

--- a/_dev/less/post.less
+++ b/_dev/less/post.less
@@ -66,8 +66,14 @@ article:first-child .post-header {
 
 .post-sidebar {
 	padding: 1em 0;
-	position: relative;
-	top: -120px;
+}
+
+@media only screen and (min-width: 992px) {
+	.post-sidebar {
+		padding: 1em 0;
+		position: relative;
+		top: -120px;
+	}
 }
 
 .post-author .author-social {
