--- a/_dev/less/style.less
+++ b/_dev/less/style.less
@@ -24,6 +24,11 @@ p {
 	font-family: 'Open Sans', Arial, Sans-Serif;
 }
 
+#scrollbubble {
+	font-family: 'Open Sans', Arial, Sans-Serif !important;
+	padding: 8px 12px !important;
+}
+
 a {
 	color: @primary;
 	padding-bottom: 3px;
